<resources>
    <string name="app_name">Practical_3_084_5B6</string>
    <string name="email_id">Email_id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_email_id">Enter Email id</string>
    <string name="enter_password">Enter password</string>
    <string name="dont_have_an_account">Dont Have an Account?</string>
    <string name="forget_password">forget password?</string>
</resources>