<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:src="@drawable/guni_pink_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/guni"
                />
            <com.google.android.material.card.MaterialCardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/card_view"
                app:cardCornerRadius="15dp"
                app:layout_constraintTop_toBottomOf="@+id/guni"

                >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="20dp">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/Edit_text_email"
                        android:textSize="20sp"
                        android:ems="10"
                        android:hint="@string/enter_email_id"
                        android:inputType="textEmailAddress"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/textview_Email"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textview_Email"
                        android:textSize="18sp"
                        android:text="@string/email_id"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/Edit_text_email"
                        app:layout_constraintBaseline_toBaselineOf="@+id/Edit_text_email"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/edittxtPassword"
                        android:ems="10"
                        android:hint="@string/enter_password"
                        android:textSize="20sp"
                        android:inputType="textPassword"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.428"
                        app:layout_constraintStart_toEndOf="@id/Textview_Pass"
                        app:layout_constraintTop_toBottomOf="@id/Edit_text_email"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/Textview_Pass"
                        android:text="@string/password"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/Edit_text_email"
                        app:layout_constraintTop_toBottomOf="@id/textview_Email"
                        app:layout_constraintBaseline_toBaselineOf="@+id/edittxtPassword"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/forgetpass"
                        android:textSize="18sp"
                        android:text="@string/forget_password"
                        android:layout_marginTop="20dp"
                        android:layout_margin="20dp"
                        android:paddingBottom="50dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/Textview_Pass"
                        app:layout_constraintHorizontal_bias="0.11"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:id="@+id/Button_login"
                        android:textColor="#FFFFFF"
                        android:paddingHorizontal="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/forgetpass"/>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/didnotacc"
                android:text="@string/dont_have_an_account"
                android:textSize="18sp"
                android:layout_margin="20dp"
                android:layout_marginTop="20dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/signup"
                app:layout_constraintHorizontal_bias="0.11"
                app:layout_constraintTop_toBottomOf="@id/card_view"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/signup"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:backgroundTint="#FFFF"
                android:textColor="#db3d91"
                app:layout_constraintBaseline_toBaselineOf="@+id/didnotacc"
                app:layout_constraintStart_toEndOf="@id/didnotacc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>